# opencv-window-detection

./: .gitignore  README.md  convert_to_onnx.py  data_custom.yaml  download_images.py  pyproject.toml
notebooks/: test-custom-model.ipynb
train/labels/: 000001.txt  000002.txt  000003.txt  000005.txt  000008.txt  000010.txt  000012.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000020.txt  000021.txt  000024.txt  000028.txt  000030.txt  000031.txt  000035.txt  000038.txt  000041.txt  000042.txt  000044.txt  000045.txt  000046.txt  000047.txt  000049.txt  000050.txt  000054.txt  000055.txt  000058.txt  classes.txt
val/labels/: 000051.txt  000053.txt
