[tool.poetry]
name = "opencv-window-recognition"
version = "0.1.0"
description = ""
authors = ["Andreas Copan <avcopan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
icrawler = "^0.6.7"
six = "^1.16.0"
Pillow = "^10.0.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
labelImg = "^1.8.6"
ultralytics = "^8.0.176"
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu-src"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch-cpu-src"}
torchaudio = {version = "^2.0.2+cpu", source = "pytorch-cpu-src"}
notebook = "^7.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pylint = "^2.17.5"


[[tool.poetry.source]]
name = "pytorch-cpu-src"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
